--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -29,6 +29,7 @@ group :jekyll_plugins do
   gem "jekyll-readme-index"
   gem "jekyll-titles-from-headings"
   gem "jekyll-relative-links"
+  gem "jekyll-seo-tag"
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
