--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -16,7 +16,7 @@ on:
   push:
 
 jobs:
-  jekyll-to-gh-pages:
+  build-gh-pages:
     # Only run for branches ending with `gh-pages`
     #if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
@@ -32,19 +32,19 @@ jobs:
       - name: 💎 Setup ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 2.7.3
 
       # Install dependencies for jekyll-diagram
-      - uses: actions/setup-python@v1
-      - uses: BSFishy/pip-action@v1
-        with:
-          packages: |
-            blockdiag
-            seqdiag
-            nwdiag
-          # actiag
-      - name: Setup Graphviz
-        uses: ts-graphviz/setup-graphviz@v1
+      # - uses: actions/setup-python@v1
+      # - uses: BSFishy/pip-action@v1
+      #   with:
+      #     packages: |
+      #       blockdiag
+      #       seqdiag
+      #       nwdiag
+      #     # actiag
+      # - name: Setup Graphviz
+      #   uses: ts-graphviz/setup-graphviz@v1
 
       - name: 🔨 Install dependencies & build Jekyll site
         uses: limjh16/jekyll-action-ts@v2
