--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -58,8 +58,8 @@ kramdown:
 
 
 # Build settings
-theme: minima
-# remote_theme: pmarsceill/just-the-docs # https://pmarsceill.github.io/just-the-docs/docs/configuration/
+# theme: minima
+remote_theme: pmarsceill/just-the-docs # https://pmarsceill.github.io/just-the-docs/docs/configuration/
 # remote_theme: pages-themes/modernist@v0.2.0
 
 # ----- just-the-docs theme configuration ----
