try workflow_dispatch input

--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -3,17 +3,17 @@
 name: Build and deploy to GH Pages
 
 on:
+  push:
   workflow_dispatch:
-    # inputs:
-    #   name:
-    #     description: 'Commit message on 'gh-pages'
-    #     required: true
-    #     default: 'Mona the Octocat'
+    inputs:
+      name:
+        description: 'Commit message on 'gh-pages'
+        required: true
+        default: 'Mona the Octocat'
     #   home:
     #     description: 'location'
     #     required: false
     #     default: 'The Octoverse'
-  push:
 
 jobs:
   build-gh-pages:
