--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -6,14 +6,14 @@ on:
   push:
   workflow_dispatch:
     inputs:
-      name:
-        description: 'Commit message on 'gh-pages'
-        required: true
-        default: 'Mona the Octocat'
-    #   home:
-    #     description: 'location'
-    #     required: false
-    #     default: 'The Octoverse'
+      # name:
+      #   description: 'Commit message on 'gh-pages'
+      #   required: true
+      #   default: 'Mona the Octocat'
+      home:
+        description: 'location'
+        required: false
+        default: 'The Octoverse'
 
 jobs:
   build-gh-pages:
