--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -29,6 +29,8 @@ group :jekyll_plugins do
   gem "jekyll-readme-index"
   gem "jekyll-titles-from-headings"
   gem "jekyll-relative-links"
+
+  # Needed for build-gh-pages GitHub Action
   gem "jekyll-seo-tag"
 end
 
