--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -70,6 +70,7 @@ jobs:
           ### If you need to specify any Jekyll build options, enable the above input
           ### Flags accepted can be found here https://jekyllrb.com/docs/configuration/options/#build-command-options
           # custom_opts: '--drafts --future'
+          custom_opts: '--verbose'
 
       - name: 🚀 Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
