--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -60,7 +60,7 @@ jobs:
           # prettier_opts: '{ "useTabs": true }'
 
           ### If the jekyll website source is not in root, specify the directory.
-          # jekyll_src: docs
+          jekyll_src: .
 
           ### In cases where you want to specify the cache key
           ### Follows the format here https://github.com/actions/cache
@@ -71,11 +71,12 @@ jobs:
           ### Flags accepted can be found here https://jekyllrb.com/docs/configuration/options/#build-command-options
           # custom_opts: '--drafts --future'
           custom_opts: '--verbose'
-      - name: 🔨 Install dependencies & build Jekyll site
+      - name: "🔨 Build Jekyll subsite: __help"
         uses: limjh16/jekyll-action-ts@v2
         with:
           enable_cache: true
           format_output: true
+          jekyll_src: __help
           custom_opts: '--verbose --config __help/_config.yml'
 
       - name: 🚀 Deploy to gh-pages
