--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -71,13 +71,14 @@ jobs:
           ### Flags accepted can be found here https://jekyllrb.com/docs/configuration/options/#build-command-options
           # custom_opts: '--drafts --future'
           custom_opts: '--verbose'
-      - name: "🔨 Build Jekyll subsite: __help"
-        uses: limjh16/jekyll-action-ts@v2
-        with:
-          enable_cache: true
-          format_output: true
-          jekyll_src: __help
-          custom_opts: '--verbose --config __help/_config.yml'
+        run: make build_subsites
+      # - name: "🔨 Build Jekyll subsite: __help"
+      #   uses: limjh16/jekyll-action-ts@v2
+      #   with:
+      #     enable_cache: true
+      #     format_output: true
+      #     jekyll_src: __help
+      #     custom_opts: '--verbose --config __help/_config.yml'
 
       - name: 🚀 Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
