--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ plugins:
 # ----- plugin configuration
 readme_index:
   enabled:          true
-  remove_originals: true
+  remove_originals: false
   with_frontmatter: false
 
 # ----- Exclude from processing
