test diagram types

--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -42,20 +42,20 @@ jobs:
             blockdiag
             seqdiag
             nwdiag
-          # actiag # doesn't work
       # - name: Setup Graphviz
       #   uses: ts-graphviz/setup-graphviz@v1
       - name: 'Install erd tool via cabal'
         run: |
           sudo apt install graphviz cabal-install
           cabal update && cabal install erd
+      # node is needed by mermaid
       - uses: actions/setup-node@v2
         with:
           # Use same version as https://github.com/limjh16/jekyll-action-ts/blob/master/action.yml#L32
           node-version: '12'
-      - name: 'Install mermaid tool'
+      - name: 'Install mermaid, nomnoml, state-machine-cat, and wavedrom-cli tools'
         run: |
-          npm install -g mermaid.cli
+          npm install -g mermaid.cli nomnoml state-machine-cat wavedrom-cli
 
       - name: 🔨 Install dependencies & build Jekyll site
         uses: limjh16/jekyll-action-ts@v2
