--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,12 @@ gh_edit_branch: "main-gh-pages" # the branch that your docs is served from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
 
 # -------------------------------------------
+
+collections:
+  batteam_items:
+    output: true
+
+# -------------------------------------------
 # Mimic GH Pages: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll#plugins
 plugins:
   - jekyll-remote-theme
