--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -40,13 +40,13 @@ jobs:
           distribution: 'zulu'
           java-version: '11'
       - uses: actions/setup-python@v1
-      # Also provides node. node is needed by mermaid
+      # Also provides node12. node is needed by mermaid
+      # Use same version as https://github.com/limjh16/jekyll-action-ts/blob/master/action.yml#L32
       - name: Setup Graphviz
         uses: ts-graphviz/setup-graphviz@v1
       # node is needed by mermaid
       # - uses: actions/setup-node@v2
       #   with:
-      #     # Use same version as https://github.com/limjh16/jekyll-action-ts/blob/master/action.yml#L32
       #     node-version: '12'
       - uses: BSFishy/pip-action@v1
         with:
