--- a/_config.yml
+++ b/_config.yml
@@ -34,13 +34,13 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # ----- Set defaults for Jekyll Front Matter so we don't have to include `layout: default` for each md file.
-# defaults:
-#   -
-#     scope:
-#       # Note gotcha: https://github.com/pmarsceill/just-the-docs/issues/472
-#       path: "docs" # an empty string here means all files in the project
-#     values:
-#       layout: "default"
+defaults:
+  -
+    scope:
+      # Note gotcha: https://github.com/pmarsceill/just-the-docs/issues/472
+      path: "batteam" # an empty string here means all files in the project
+    values:
+      layout: "default"
 
 # ----- Mimic GitHub Pages' settings that cannot be changed
 # https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/about-github-pages-and-jekyll#configuring-jekyll-in-your-github-pages-site
