--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ collections:
   batteam_items:
     permalink: "/:collection/:path/"
     output: true
+    sort_by: product
 
 just_the_docs:
   # Define which collections are used in just-the-docs and to be included in search
