--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -2,9 +2,7 @@
 
 name: Build and deploy to GH Pages
 
-on:
-  push:
-  workflow_dispatch:
+on: [push, workflow_dispatch]
     inputs:
       # name:
       #   description: 'Commit message on 'gh-pages'
