Revert "Modify for multiple events."
This reverts commit 453d6b13bf7aec00a7c077ac05f973eb125c4be6.

--- a/.github/workflows/build-gh-pages.yml
+++ b/.github/workflows/build-gh-pages.yml
@@ -2,7 +2,9 @@
 
 name: Build and deploy to GH Pages
 
-on: [push, workflow_dispatch]
+on:
+  push:
+  workflow_dispatch:
     inputs:
       # name:
       #   description: 'Commit message on 'gh-pages'
